<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tips Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="billAmount">Bill total</string>
    <string name="percentage">Tip Percentage</string>
    <string name="tip">Tip is</string>
    <string name="tipTotal">$0.00</string>
    <string name="total">Total is</string>
    <string name="billTotal">$0.00</string>
	<string name="viewTip">Tip to calculate tip in your head!!</string>
</resources>
